# metadata-standardization-agent

./: .env.example  .gitignore  README.md  pyproject.toml
data/: sampling.py
data/af/gold/: af-00e256274c3dd0976313a73df36880f4.json  af-04162af64b33eef6da0ab3e38a39fa8e.json  af-042dee3864a80e39e2501e84e844a697.json  af-08d2245110a7f75bd7adade421b38a18.json  af-0a6f5c1afbcc31622eb34daf88c2c016.json  af-0afb4197430ef0ab784ad1c05ebf2d20.json  af-0d59cba813cdae8a1ee493e954732911.json  af-0eadc4c1d07019f1ab7d5f36944eaae2.json  af-102da8a3155714812a323aed945f4be4.json  af-109162ed40ede274202eab96bf640fa4.json  af-113912557e292b0570dcd845e39831cb.json  af-12fd290cb8260b7e2e289f8a83b44fb5.json  af-1526dffefe8a8390ae7d569b4f4ec03e.json  af-1accbd367bac01690a733c77460371a7.json  af-1e259bab8974d0cc99756d8808997871.json  af-1ecea90835e01feccb855a188d010116.json  af-223ce3515c5f6521b64ef25a66789a51.json  af-26cd3613ea53ec29b994ee1c7c57c827.json  af-2715eaa4e4a08f2df38ada0067872230.json  af-2bc6713576dda7c7e6378aec38df437d.json  af-2d6c51fbd0916109550a708d485903b7.json  af-2de084b9bb2dc06c89ad437824764839.json  af-2f9e91ff774243ef11d148a2bf7a6822.json  af-370a4b793e507ca0c638e2268a2556dd.json  af-379ec1e6f7f0633a62997136db2854a7.json  af-381088ffe5fdaa94f0838f1feed3ea95.json  af-38aa877c34c03cc35fd8ec12992105d0.json  af-38ba22b0a2bdace0d0dd7504cbe15aae.json  af-4137cb4ade32874959dd2de41c2eaf72.json  af-46ed471a6b4ad5b97817ff2c26ef6ddd.json  af-4aa1e2cbdb791f7e0e75f84b1d103603.json  af-4c04a73e87f0b5deb00d88d4cb20095d.json  af-53fb094fd0f39f6d0b0fee3fc5db786f.json  af-54eb270a67060da0d1edbf83032256aa.json  af-54ef9a03bc7abbedc60a261bf49e1119.json  af-57299edf509b218aa9b4c4a2e1d979bd.json  af-584620d30b86098ece9b96edb407c786.json  af-5cea1fcd164c1cc994c4a38dda8ebe21.json  af-5eb7d04d71566c53dfc9eb1c7346c68d.json  af-622ae688e4aae133de1856c2616e4924.json  (+58 more)
data/af/input/: af-00e256274c3dd0976313a73df36880f4.json  af-04162af64b33eef6da0ab3e38a39fa8e.json  af-042dee3864a80e39e2501e84e844a697.json  af-08d2245110a7f75bd7adade421b38a18.json  af-0a6f5c1afbcc31622eb34daf88c2c016.json  af-0afb4197430ef0ab784ad1c05ebf2d20.json  af-0d59cba813cdae8a1ee493e954732911.json  af-0eadc4c1d07019f1ab7d5f36944eaae2.json  af-102da8a3155714812a323aed945f4be4.json  af-109162ed40ede274202eab96bf640fa4.json  af-113912557e292b0570dcd845e39831cb.json  af-12fd290cb8260b7e2e289f8a83b44fb5.json  af-1526dffefe8a8390ae7d569b4f4ec03e.json  af-1accbd367bac01690a733c77460371a7.json  (+85 more)
data/schemas/: af.json  atacseq.json  celldive.json  codex.json  desi.json  histology.json  imc-2d.json  lcms.json  lightsheet.json  maldi.json  mibi.json  rnaseq.json
evaluation/: README.md  __init__.py  __main__.py  assays.py  baseline.py  data-analysis.ipynb  data_analysis.py  demo.ipynb  error_causes.py  evaluate.py  experiment.py  metrics.py  plots.py  prompts.py  significance.py
src/metadata_migration_agent/: __init__.py  __main__.py  agent.py  cache.py  logging_config.py  prompts.py  schema.py  state.py  token_tracker.py  tools.py  utils.py  workflow.py
src/metadata_standardization_agent/: __init__.py  __main__.py  agent.py  cache.py  logging_config.py  prompts.py  state.py  tools.py  utils.py  workflow.py
tests/: conftest.py  test_agent.py  test_cache.py  test_data_analysis.py  test_error_causes.py  test_metrics.py  test_schema.py  test_significance.py  test_token_tracker.py  test_workflow.py
(+4681 files in other folders)
