[project]
name = "metadata-migration-agent"
version = "0.1.0"
description = "A LangGraph agent for migrating legacy metadata records to CEDAR metadata template format"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Josef Hardi" },
]

dependencies = [
    "langchain>=1.2,<2.0",
    "langgraph>=1.0,<2.0",
    "langchain-openai>=1.0,<2.0",
    "langchain-core>=1.2,<2.0",
    "pydantic>=2.0,<3.0",
    "cedar-mcp",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metadata_migration_agent"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests", "evaluation"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]

[tool.ruff.lint.per-file-ignores]
"src/metadata_migration_agent/prompts.py" = ["E501"]


[tool.ruff.lint.isort]
known-first-party = ["metadata_migration_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.uv.sources]
cedar-mcp = { path = "../cedar-mcp", editable = true }
