[project]
name = "metadata-standardization-agent"
version = "0.1.0"
description = "A LangGraph agent for migrating legacy metadata records to CEDAR metadata template format"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Josef Hardi" },
]

dependencies = [
    "langchain>=1.2,<2.0",
    "langgraph>=1.0,<2.0",
    "langchain-openai>=1.0,<2.0",
    "langchain-core>=1.2,<2.0",
    "pydantic>=2.0,<3.0",
    "cedar-mcp>=1.0.0",
    "python-dotenv>=1.2.1",
    "langsmith>=0.7.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.9",
]

[project.scripts]
migrate = "metadata_standardization_agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metadata_standardization_agent"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests", "evaluation"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]

[tool.ruff.lint.per-file-ignores]
# The system prompt is authored as Markdown; long lines and intentional
# trailing-space line breaks are part of the prompt text.
"src/metadata_standardization_agent/prompts.py" = ["E501", "W291"]


[tool.ruff.lint.isort]
known-first-party = ["metadata_standardization_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
]

